crates/formatter/tests/snapshots/snapshots__synapse__main__delta__69__01device_list_oubound_by_room.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2023 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.
--
-- Originally licensed under the Apache License, Version 2.0:
-- <http://www.apache.org/licenses/LICENSE-2.0>.
--
-- [This file includes modifications made by New Vector Limited]
--
--
/* Copyright 2022 The Matrix.org Foundation C.I.C
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

create table device_lists_changes_in_room (
	user_id text not null,
	device_id text not null,
	room_id text not null,

	-- This initially matches `device_lists_stream.stream_id`. Note that we
	-- delete older values from `device_lists_stream`, so we can't use a foreign
	-- constraint here.
	--
	-- The table will contain rows with the same `stream_id` but different
	-- `room_id`, as for each device update we store a row per room the user is
	-- joined to. Therefore `(stream_id, room_id)` gives a unique index.
	stream_id bigint not null,

	-- We have a background process which goes through this table and converts
	-- entries into rows in `device_lists_outbound_pokes`. Once we have processed
	-- a row, we mark it as such by setting `converted_to_destinations=TRUE`.
	converted_to_destinations boolean not null,
	opentracing_context text
);

create unique index device_lists_changes_in_stream_id
	on device_lists_changes_in_room (stream_id, room_id);
create index device_lists_changes_in_stream_id_unconverted
	on device_lists_changes_in_room (stream_id)
	where not converted_to_destinations;
